blue bg button fix color contrast

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -44,7 +44,8 @@ header {
             }
 
             .waitlist {
-                background: #4977EA;
+                // background: #4977EA;
+                background: #3F6FE9;
                 color: #fff;
                 font-weight: 600;
                 padding: .75rem .5rem;
