--- a/style/_main.scss
+++ b/style/_main.scss
@@ -29,7 +29,8 @@ main {
                 font-family: Lato;
 
                 &.submit {
-                    background: #4977EA;
+                    // background: #4977EA;
+                    background: #3F6FE9;
                     color: #fff;
                     font-weight: 600;
                 }
